# dota2-replay-anonymizer

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
crates/anonymizer/: Cargo.toml
crates/anonymizer/src/: inspector.rs  lib.rs  main.rs  options.rs  player.rs  reader.rs  writer.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
src/: App.tsx  anonymizeOptions.ts  main.tsx  openDota.ts  optionCatalog.ts  options.ts  playerDisplay.ts  playerRules.ts  replayState.ts  types.ts  uiOptions.ts  utils.ts
src/anonymizer/: anonymizeOptions.ts  openDota.ts  optionCatalog.ts  playerDisplay.ts  playerRules.ts  uiOptions.ts
src/components/: InfoTooltip.tsx
src/components/layout/: AppHeader.tsx  ControlPanel.tsx  OptionsControls.tsx  ReplayControls.tsx  ReviewPanel.tsx  SaveControls.tsx
src/components/review/: LockedReview.tsx  OptionGroupSection.tsx  OptionToggle.tsx  OptionsReview.tsx  PlayerCard.tsx  PlayerRulesPanel.tsx  PlayerTeamSection.tsx  PlayersReview.tsx  SteamIdListInput.tsx
src/hooks/: useReplayAnonymizer.ts  useReplayWorker.ts
src/styles/: App.css
src/workers/: replayWorker.ts
