[package]
name = "d2-replay-anonymizer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
source2-demo = { path = "../../../source2-demo/source2-demo", default-features = false, features = ["dota"] }
# source2-demo = { version = "0.5.2", default-features = false, features = ["dota"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
