[package]
name = "d2-replay-anonymizer"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Artem Rupasov <artemrupasov125@gmail.com>"]

[dependencies]
source2-demo = { version = "0.5", default-features = false, features = ["dota"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
