[package]
name = "d2-replay-anonymizer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
source2-demo = { version = "0.5", default-features = false, features = ["dota"] }
anyhow = "1.0"
murmur2 = "0.1"
serde = { version = "1.0", features = ["derive"] }
