[package]
name = "d2-replay-anonymizer-cli"
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["Artem Rupasov <artemrupasov125@gmail.com>"]
publish = false

[[bin]]
name = "d2ra"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
d2-replay-anonymizer = { path = "../anonymizer" }
serde_json = "1.0"
