[package]
name = "d2-replay-anonymizer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "d2ra"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
d2-replay-anonymizer = { path = "../anonymizer" }
serde_json = "1.0"
